# 2024_umiusi_scripts

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/nucleo_communicate/: plot_anime.py  protocol.py  scripts.py
