[project]
name = "2024-umiusi-scripts"
version = "0.1.0"
description = "umiusi便利スクリプトたち"
authors = [
    { name = "H1rono", email = "hronok66@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []
